# cifar-ten

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: preview_images.rs  show.rs
src/: display.rs  download.rs  lib.rs  main.rs  test.rs
