[package]
name = "cifar-ten"
version = "0.1.0"
authors = [
    "Christopher Moran <christopher.and.moran@gmail.com>",
    "Manuel Drehwald"
]
edition = "2018"
repository = "https://github.com/quietlychris/cifar-ten"
readme = "README.md"
license = "MIT"
description = "Parses the CIFAR-10 dataset binary files, and returns them as a Rust ndarray tuple"
keywords = ["data", "machine", "learning", "cifar", "ten"]
exclude = [
    "data/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cifar_ten"

[features]
default = []
display = ["show-image", "image"]
download = ["reqwest", "flate2", "tar"]

[dependencies]
ndarray = "0.14"
rand = "0.8"

# Used for downloading dataset
reqwest = {version = "0.11", optional = true, features = ["blocking"]}
# Used for extracting dataset from compressed format
flate2 = {version = "1.0.2", optional = true, features = ["rust_backend"], default-features = false}
tar = {version = "0.4", optional = true}

# Used to show datasets
image = {version = "0.23", optional = true}
show-image = {version = "0.6", features = ["image"], optional = true}