[package]
name = "cifar-ten"
version = "0.6.0"
authors = [
    "Christopher Moran <christopher.and.moran@gmail.com>",
    "Manuel Drehwald"
]
edition = "2018"
repository = "https://github.com/quietlychris/cifar-ten"
readme = "README.md"
license = "MIT"
description = "Parses the CIFAR-10 dataset binary files, with methods for downloading and ndarray conversion"
keywords = ["data", "machine", "learning", "cifar", "ten"]
exclude = [
    "data/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cifar_ten"

[features]
default = []
download = ["curl", "pbr", "flate2", "tar"]
to_ndarray_016 = ["ndarray_016"]
to_ndarray_015 = ["ndarray_015"]
to_ndarray_014 = ["ndarray_014"]
to_ndarray_013 = ["ndarray_013"]

[dependencies]
ndarray_016 = { package = "ndarray", version = "0.16", optional = true }
ndarray_015 = { package = "ndarray", version = "0.15", optional = true }
ndarray_014 = { package = "ndarray", version = "0.14", optional = true }
ndarray_013 = { package = "ndarray", version = "0.13.1", optional = true }
rand = "0.8"

# Used for downloading dataset
curl = {version = "0.4", optional = true}
pbr = {version = "1.0", optional = true}
# Used for extracting dataset from compressed format
flate2 = {version = "1.0.2", optional = true, features = ["rust_backend"], default-features = false}
tar = {version = "0.4", optional = true}

[dev-dependencies]
# Used to show datasets
image = "0.25"
show-image = {version = "=0.14.0", features = ["image"]}
